test_suite5/ALAN/test_suite/alan-2022-examples/failing/003170_mutation.alan
source U begin if 4 then relax call sB8T() end
